# oil-scale

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs
.github/workflows/: release.yml
examples/: quick_start.rs
src/: avx2.rs  colorspace.rs  jpeg.rs  jpeg_ffi.rs  kernel.rs  lib.rs  neon.rs  png.rs  scale.rs  srgb.rs  sse2.rs
tests/: jpeg_ffi_test.rs  jpeg_test.rs  png_test.rs  reference.rs
