[package]
name = "oil-scale"
version = "0.2.0"
edition = "2021"
license = "MIT"
rust-version = "1.70"
description = "Fast, streaming image resizer with sRGB-correct interpolation and low memory usage"
authors = ["Tim Elliott <tle@holymonkey.com>"]
repository = "https://github.com/ender672/oil-scale"
readme = "README.md"
keywords = ["image", "resize", "jpeg", "png", "srgb"]
categories = ["multimedia::images", "graphics"]

[features]
default = ["png", "jpeg"]
png = ["dep:png"]
jpeg = ["dep:jpeg-decoder", "dep:jpeg-encoder"]
jpeg-turbo = ["dep:libc", "dep:cc"]
force-scalar = []

[dependencies]
jpeg-decoder = { version = "0.3", optional = true }
jpeg-encoder = { version = "0.6", optional = true }
png = { version = "0.17", optional = true }
libc = { version = "0.2", optional = true }

[build-dependencies]
cc = { version = "1", optional = true }

[dev-dependencies]
rand = "0.8"

[profile.release-with-debug]
inherits = "release"
debug = true

[[bin]]
name = "imgscale"
path = "src/bin/imgscale.rs"
required-features = ["png", "jpeg"]

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"
required-features = ["jpeg", "png"]
